<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authorization.AuthorizationActivity">

    <TextView
        android:id="@+id/textAuthorization"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:gravity="center_horizontal"
        android:fontFamily="sans-serif"
        android:text="@string/authorisation"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.227" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAuthorization">

        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:ccp_autoDetectCountry="true"
            app:ccp_countryAutoDetectionPref="SIM_NETWORK_LOCALE" />

        <EditText
            android:id="@+id/editText_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:hint="@string/enter_phone"
            android:inputType="phone"
            android:autofillHints="" />

    </LinearLayout>

    <com.jakode.verifycodeedittext.VerifyCodeEditText
        android:id="@+id/editText_code"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:BottomErrorIcon="@drawable/bottom_error_icon"
        app:BottomIconHeight="2dp"
        app:BottomIconWidth="40dp"
        app:BottomSelectedIcon="@drawable/bottom_selected_icon"
        app:BottomUnSelectedIcon="@drawable/bottom_unselected_icon"
        app:ItemSpaceSize="28dp"
        app:TextColor="@color/black"
        app:TextSize="16sp"
        app:ViewCount="Six"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:text="@string/button_send_SMS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_code" />


</androidx.constraintlayout.widget.ConstraintLayout>